Fixed left-sided gap in shadow.

--- a/internify/src/components/organisms/styles/Footer.css
+++ b/internify/src/components/organisms/styles/Footer.css
@@ -5,7 +5,7 @@
   height: 110px;
   margin-top: 6%;
   background-color: white;
-  box-shadow: 3px 0 5px -2px black;
+  box-shadow: 0px -2px 5px -3px black;
   overflow: hidden;
 }
 
